[gd_scene load_steps=2 format=3 uid="uid://bp1kl7hr5f2qd"]

[ext_resource type="Script" path="res://scripts/ui/pause_menu.gd" id="1_pause_menu"]

[node name="PauseMenu" type="CanvasLayer"]
layer = 100
script = ExtResource("1_pause_menu")

[node name="Overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -140.0
offset_right = 120.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.227451, 0.52549, 1, 1)
theme_override_font_sizes/font_size = 28
text = "Paused"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ResumeButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(180, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Resume"

[node name="RestartButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(180, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Restart Level"

[node name="SettingsButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(180, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Settings"

[node name="MainMenuButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(180, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Main Menu"
